Set up PhotoRater portfolio site

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 ---
-title: "Pixel Perfect Websites | Code Stitch Web Designs | Denver, CO"
-description: "Meta description for the page"
+title: "PhotoRater | David Harms Portfolio"
+description: "Learn about the PhotoRater app and explore David's work"
 permalink: "/"
 tags: "sitemap" # content/content.json will make sure that all pages in content/ are marked with a "sitemap" tag, for automatic sitemap generation. As index.html is not in content/, we need to add it here to ensure the root page is included in the sitemap generation
 ---
@@ -35,12 +35,12 @@ tags: "sitemap" # content/content.json will make sure that all pages in content/
 
     <section id="hero-143">
         <div class="cs-container">
-            <span class="cs-topper">CodeStitch Presents</span>
-            <h1 class="cs-title">The Intermediate Website Kit (SASS)</h1>
+            <span class="cs-topper">Welcome to PhotoRater</span>
+            <h1 class="cs-title">Rate Your Photos Instantly</h1>
             <p class="cs-text">
-                Building faster websites, faster. Just clone, update _data/client.js, swap out some sections, and away you go!
+                PhotoRater uses on-device intelligence to score your pictures and help you choose the best shot.
             </p>
-            <a href="/contact/" class="cs-button-solid">Get in Touch</a>
+            <a href="#" class="cs-button-solid">Download on the App Store</a>
         </div>
 
         <!-- Background Image -->
@@ -233,8 +233,8 @@ tags: "sitemap" # content/content.json will make sure that all pages in content/
     <section id="gallery-48">
         <div class="cs-container">
             <div class="cs-content">
-                <span class="cs-topper">Our Portfolio</span>
-                <h2 class="cs-title">Et orci volutpat, back up generator installations</h2>
+                <span class="cs-topper">Other Projects</span>
+                <h2 class="cs-title">Explore more of my work</h2>
             </div>
             <div class="cs-image-group">
                 <div class="cs-row cs-row-1">
